--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./download.png" />
     <link rel="stylesheet" href="./css/index.css" />
+    <script src="index.js" defer></script>
     <title>Chat Interface</title>
   </head>
   <body>
@@ -19,7 +20,5 @@
       <input type="text" id="messageInput" placeholder="Type your message" />
       <button class="submit" type="submit">Send</button>
     </form>
-
-    <script src="index.js"></script>
   </body>
 </html>
